http-ingress/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: http
  labels:
    app: http
  namespace: demo-ingress
spec:
  containers:
    - name: http
      image: httpd:latest
      ports:
        - containerPort: 80
