http-ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-service
  namespace: demo-ingress
  labels:
    app: http
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: http
